Added logic to set the send button to disabled if no email details are present.

--- a/app/src/main/res/layout/explicit_intent.xml
+++ b/app/src/main/res/layout/explicit_intent.xml
@@ -17,7 +17,7 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
-        android:text="@string/email_text"
+        android:text="@string/default_email_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/email_subject"
+        android:text="@string/default_subject_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
         android:gravity="clip_horizontal"
         android:inputType="textMultiLine"
         android:maxLength="50"
-        android:text="@string/email_content"
+        android:text="@string/default_content_text"
         app:layout_constraintBottom_toTopOf="@+id/saveButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
