--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="background_activity">#8BC34A</color>
+    <color name="background_picture">#9C27B0</color>
+    <color name="background_camera">#F44336</color>
+    <color name="background_details">#FFEB3B</color>
+    <color name="background_button">#03A9F4</color>
 </resources>
